# obsidian-novel-publisher

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  novels.yaml  pyproject.toml
.github/workflows/: ci.yml
assets/prompts/: cover.txt  system.txt  topic_system.txt  topic_user.txt  user.txt
docs/: API_INTEGRATION.md  CHANGELOG.md  CI_SETUP.md  OPERATIONS_V0_3_2.md  OUTLINE_GEN_ROADMAP.md  PLAN.md  PLAN_NOVEL_AUTHOR_UNIFY.md  REFACTOR_PLAN_V3_MULTI_NOVEL.md  RUNBOOK.md
scripts/: dry-run.sh  install-logrotate.sh  install-systemd.sh  logrotate-novel-publisher  run-5-chapters.sh  uninstall-systemd.sh
src/: backup_reader.py  character_loader.py  cover_gen.py  cover_prompt_builder.py  cover_upload.py  github_backup.py  hmac_client.py  markdown_renderer.py  novel_outline.py  novel_registry.py  novel_writer.py  publisher.py  state.py  state_per_novel.py  style_guide.py  text_punct.py  topic_gen.py  wechat_notifier.py
systemd/: novel-publish.service  novel-publish.timer
tests/: conftest.py  test_character_loader.py  test_cover_gen_i2i.py  test_cover_prompt_builder.py  test_markdown_renderer_orphan.py  test_novel_outline.py  test_novel_registry.py  test_publisher_multi.py  test_state_cover_urls.py  test_state_per_novel.py  test_style_guide.py  test_text_punct_orphan_quotes.py
tests/fixtures/: README.md
tests/integration/: test_backup_flow.py  test_failure_modes.py  test_multi_novel_e2e.py  test_publish_e2e.py
tests/mocks/: helpers.py  test_helpers.py
tests/unit/: test_ci_workflow.py  test_cover_gen.py  test_cover_upload.py  test_github_backup.py  test_hmac_client.py  test_markdown_renderer.py  test_novel_writer.py  test_p5_artifacts.py  test_publisher.py  test_state.py  test_text_punct.py  test_topic_gen.py  test_wechat_notifier.py
