# ============================================================
# obsidian-novel-publisher — 项目配置
# ============================================================
# v0.2 阶段 (2026-07-06), P0 骨架
# 依赖、工具、覆盖率门槛、入口点、project metadata 全部在此
# ============================================================

[project]
name = "obsidian-novel-publisher"
version = "0.2.0"
description = "每天 3 次自动生成中场篇科幻小说 + 封面图, 推送到 obsidian-journal 个人博客 (HMAC 鉴权 + GitHub 备份)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "黑 (Hei)", email = "hei@handfoot.dev" },
]
keywords = [
    "novel",
    "ai",
    "minimax",
    "obsidian-journal",
    "publisher",
    "sci-fi",
]

# ============================================================
# 运行时依赖 (P2 主程序所需, P0 提前声明)
# ============================================================
dependencies = [
    "requests>=2.31.0",          # HTTP 调用 (HMAC 推送 + GitHub Contents API)
    "python-dotenv>=1.0.0",       # .env 加载
    "pydantic>=2.5.0",            # 状态/配置模型 (类型安全)
]

# ============================================================
# 开发/测试依赖 (P0 验证 + P6 测试金字塔)
# ============================================================
[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
    # 代码质量
    "ruff>=0.6.0",                # linter (替代 flake8/isort/pyupgrade)
    "black>=24.8.0",              # formatter
    "mypy>=1.11.0",               # 类型检查 (strict mode)
    "types-requests>=2.31.0",
    # pre-commit
    "pre-commit>=3.8.0",
]

[project.scripts]
# CLI 入口 (P2 落地后启用, P0 先声明占位)
# publish-once = "src.publisher:cli_main"
# skip-next = "src.state:cli_skip_next"

[project.urls]
Homepage = "https://github.com/blackclaw0318/obsidian-novel-publisher"
Repository = "https://github.com/blackclaw0318/obsidian-novel-publisher"
Issues = "https://github.com/blackclaw0318/obsidian-novel-publisher/issues"
"Budget Project" = "https://github.com/blackclaw0318/obsidian-journal"
"Upstream Assets" = "https://github.com/blackclaw0318/xhs-novel-bot"

# ============================================================
# pytest 配置 (P6 测试用)
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: 单元测试 (无 IO 依赖, 跑得快)",
    "integration: 集成测试 (HTTP/DB mock)",
    "e2e: 端到端测试 (真实 LLM/dev 环境, 默认跳过)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:requests.*",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# 覆盖率门槛 (Q12: 80%)
# ============================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
precision = 1

# ============================================================
# ruff (linter) — 替代 flake8/isort/pyupgrade
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "output",
    "data",
    "logs",
]

[tool.ruff.lint]
# 选与 black 兼容的规则集
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "PTH",  # use pathlib
    "ERA",  # eradicate commented-out code
]
ignore = [
    "E501",   # line too long (black 已管)
    "B008",   # function call in default argument (Pydantic Field 常用)
    "ERA001", # 注释掉的代码 (迁移期常见)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SIM117"]  # 允许 pytest assert + 嵌套 with (mock 测试常见)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# black (formatter)
# ============================================================
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
  | build
  | dist
  | output
  | data
  | logs
)/
'''

# ============================================================
# mypy (type checker)
# ============================================================
# P1 迁移期: 宽松 (xhs 老代码未跑 mypy, type hints 不全)
# P6 重构期: 收紧 strict + 写新代码时严格返 type annotations
# P1  → 暂不 strict, 避免迁移期一堆 false-positive 挡 lint
# P6  → strict = true, 给 publisher/state/github_backup 等新代码戴紧箍咒
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
ignore_missing_imports = true        # PIL stub 缺失等暂略
plugins = ["pydantic.mypy"]
exclude = [
    "build",
    "dist",
    ".venv",
    "output",
    "data",
    "logs",
]

# tests/ override (P6 阶段写测试时启用, P1 阶段测试为空包无需 override)
# [[tool.mypy.overrides]]
# module = "tests.*"
# disallow_untyped_defs = false
# check_untyped_defs = false

# P6 阶段会替换 [tool.mypy] 为:
# strict = true
# disallow_untyped_defs = true
# (且 exclude 包含 src/novel_writer.py / src/topic_gen.py / src/cover_gen.py
#  这三个 P1 从 xhs 迁来的文件, P6 重写或补 type hints 后去除 exclude)

# ============================================================
# 项目结构 build 配置 (预留, P7 CI build 时用)
# ============================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "assets",
    "docs",
    "README.md",
    "pyproject.toml",
]